--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,7 @@ main {
   width: 100%;
   height: 100%;
   min-height: 60px;
+  max-height: 60px;
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
@@ -206,6 +207,7 @@ main {
   background-color: #61a8de;
   width: 100%;
   height: 100%;
+  max-height: 60px;
   min-height: 60px;
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
@@ -233,6 +235,7 @@ main {
   background-color: #7d3daf;
   width: 100%;
   height: 100%;
+  max-height: 60px;
   min-height: 60px;
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
